# ewellix_lift_common

./: README.md
ewellix_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ewellix_description/config/: tlt_x13.yaml  tlt_x14.yaml  tlt_x15.yaml  tlt_x16.yaml  tlt_x17.yaml  tlt_x23.yaml  tlt_x24.yaml  tlt_x25.yaml  tlt_x26.yaml  tlt_x27.yaml  ur_620.yaml
ewellix_description/config/control/: initial_positions.yaml  joint_limits.yaml  jpc.yaml  jtc.yaml
ewellix_description/launch/: description.launch.py
ewellix_description/meshes/tlt300/: plate.stl
ewellix_description/meshes/tlt300/long/: base.stl  full.stl  lower.stl  upper.stl
ewellix_description/meshes/tlt300/short/: base.stl  full.stl  lower.stl  upper.stl
ewellix_description/meshes/tlt400/: TLT10-C1410-000_BP-E.stl  TLT10-C2410-000_BP-E.stl  long_full.stl
ewellix_description/meshes/tlt400/long/: base.stl  lower.stl  upper.stl
ewellix_description/meshes/tlt400/short/: base.stl  full.stl  lower.stl  upper.stl
ewellix_description/meshes/tlt500/long/: base.stl  full.stl  lower.stl  upper.stl
ewellix_description/meshes/tlt500/short/: base.stl  full.stl  lower.stl  upper.stl
ewellix_description/meshes/tlt600/: TLT10-C1610-000_BP-E.stl  TLT10-C2610-000_BP-E.stl  long_full.stl
ewellix_description/meshes/tlt700/: TLT10-C1710-000_BP-E.stl  TLT10-C2710-000_BP-E.stl
ewellix_description/meshes/ur620/: full.stl
ewellix_description/urdf/: ewellix_lift.urdf.xacro  ewellix_macro.xacro
ewellix_sim/: CHANGELOG.rst  CMakeLists.txt  package.xml
ewellix_sim/launch/: simulation.launch.py
ewellix_viz/: CHANGELOG.rst  (+2 more)
(+41 files in other folders)
