<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ewellix_sim</name>
  <version>0.1.0</version>
  <description>Clearpath's simulation package for Ewellix TLT lifting columns</description>

  <author email="lcamero@clearpathrobotics.com">Luis Camero</author>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>

  <license>BSD</license>

  <exec_depend>ewellix_interfaces</exec_depend>
  <exec_depend>ewellix_moveit_config</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
